[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-tide"
version = "0.1.0"
description = "Lightweight ETL Logging & Observability Utility"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "r3card0", email = "ricardo.rdz@protonmail.com"}
]

license = {file = "LICENSE"}

keywords = ["etl", "logging", "observability", "pipeline", "data-engineering"]


classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/r3card0/SentinelTide.git"
Repository = "https://github.com/r3card0/SentinelTide.git"

[tool.setuptools]
package-dir = { "" = "src"}

[tool.setuptools.packages.find]

where = ["src"]